--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
           <summary>
             貼り付け時サンプル
           </summary>
-          OFF選択時<br>
+          OFF選択時想定値<br>
           <div class="box2">
           「ではみなさんは、そういうふうに川だと云われたり、乳の流れたあとだと云われたりしていたこのぼんやりと白いものがほんとうは何かご承知ですか。」<br>
           先生は、黒板に吊した大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問をかけました。
           </div>
           <br>
-          ON選択時<br>
+          ON選択時想定値<br>
           <div class="box2">
           「ではみなさんは、そういうふうに川だと云(い)われたり、乳の流れたあとだと云われたりしていたこのぼんやりと白いものがほんとうは何かご承知ですか。」<br>
           先生は、黒板に吊(つる)した大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指(さ)しながら、みんなに問(とい)をかけました。
@@ -201,10 +201,20 @@
         <br>
 
         <h1 id="agreement">利用規約</h1>
+        これはTRPGのシナリオ配布用HTML形式テンプレートです。<br>
+        クトゥルフ神話TRPGシナリオでの使用を想定していますが、用語等を変更することで他のシステムにもご利用いただけます。<br>
+        それ以外の用途にも、以下「NG 禁止事項」に反しない限り、ご利用いただけます。<br>
+        <br>
         本テンプレートは、HTML形式のシナリオ配布がもっとお気軽にできるようになるといいなあ、の考えのもと作られています。<br>
         （使用時には、ツール使用でHTML形式に変換してテンプレに流し込むとかすると楽だと思います。）<br>
         <br>
         プログラム知識の少ない人間の作った拙いものですので、色々とお目こぼしいただけますと幸いです。<br>
+        <br>
+        以下のサンプルサイトで挙動をご確認いただけます。<br>
+        <a href="https://jxsnwk.github.io/templates_001/" target="_blank">https://jxsnwk.github.io/templates_001/</a><br>
+        <br>
+        <br>
+        質問や不明点はTwitter：<a href="https://twitter.com/Jxsn_wk" target="_blank">@Jxsn_wk</a>までお問い合わせください。<br>
         <br>
         <br>
         <br>
@@ -228,7 +238,7 @@
             <ul>
               <li>無償/有償問わず</li>
               <li>改変した場合を含む</li>
-              <li>既存のHTMLファイルに部分利用した場合を含む</li>
+              <li>既存のHTMLファイルに一部利用した場合を含む</li>
             </ul>
           </ul>
         </div>
@@ -239,9 +249,28 @@
             <li>本テンプレートを改変・部分利用した【テンプレート】の公開及び配布</li>
             <ul>
               <li>無償/有償問わず</li>
-              <li>改変・部分利用の大小を問わず</li>
-              <li>配布時には、配布物内に本テンプレートの配布元情報記載が必要。要リンクシェア。</li>
+              <li>改変・一部利用の程度の大小を問わず</li>
             </ul>
+          </ul>
+        </div>
+        <br>
+        <br>
+        <br>
+
+        <h4>"Template by Jaxson"の削除について</h4>
+        <div class="box1">
+          ページ下部footer内の"Template by Jaxson"表示は、
+          <ul>
+            <li>【シナリオ】の公開及び頒布の場合、削除してもよい</li>
+            <li>【テンプレート】の公開及び配布の場合、以下の条件を満たしていれば削除してもよい</li>
+             <ul>
+               <li>配布物内(READMEなど)に本テンプレートの配布元URLが記載されていること</li>
+             </ul>
+             <div class="box3 rd small">
+              記載例）<br>
+              改変元テンプレート：<br>
+              https://jxsn-wk.booth.pm/items/4385648<br>
+             </div>
           </ul>
         </div>
         <br>
@@ -250,13 +279,13 @@
         <br>
 
         <div class="history">
-        ▽2022/11/26 up
+        ▽2022/12/11 up
         </div>
         </div><!-- class:text -->
 
       </div><!-- class:contents -->
     </div><!-- class:wrap -->
-    <footer></footer>
+    <footer class="center">Template by <a href="https://jxsn-wk.booth.pm/items/4385648" target="_blank">Jaxson</a></footer>
     <div id="page_top"><a href="#"></a></div>
   </body>
 </html>
