--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/common.css">
     <link rel="stylesheet" href="./assets/css/layout.css">
     <link rel="stylesheet" href="./assets/css/parts.css">
-    <script type="text/javascript" src="./assets/js/parts.js"></script>
+    <script src="./assets/js/parts.js"></script>
   </head>
   <body oncopy="rubyToggle()" onload="countText()">
     <header>
@@ -166,7 +166,7 @@
         </div>
         <a href="https://www.aozora.gr.jp/cards/000081/files/456_15050.html" target="_blank">宮沢賢治作「銀河鉄道の夜」　青空文庫より引用</a><br>
         <br>
-        <textarea name="example" placeholder="貼り付け動作確認用。ここに貼り付けられます。" cols="60" rows="6"></textarea>
+        <textarea name="example" placeholder="貼り付け動作確認用。ここに貼り付けられます。" cols="46" rows="6"></textarea>
         <details>
           <summary>
             貼り付け時サンプル
